# storage/api-docs/api-docs.json
@@ -289,6 +289,290 @@
                 }
             }
         },
+        "/api/country": {
+            "get": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Get a list of country with dynamic filtering, sorting, pagination, and advanced search",
+                "operationId": "63d29649fcf556d72cacfc54b8696f1f",
+                "parameters": [
+                    {
+                        "name": "filter",
+                        "in": "query",
+                        "description": "Dynamic filtering with multiple fields (e.g., `status:active|age:gt:30`)",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Full-text search (e.g., `keywords`)",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Sort the results by a specific field (e.g., `price` or `name`)",
+                        "schema": {
+                            "type": "string",
+                            "example": "created_at"
+                        }
+                    },
+                    {
+                        "name": "sort_dir",
+                        "in": "query",
+                        "description": "Direction of sorting (asc or desc)",
+                        "schema": {
+                            "type": "string",
+                            "default": "asc",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number for pagination (default: 1)",
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items per page (default: 10)",
+                        "schema": {
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/CountryResource"
+                                            }
+                                        },
+                                        "meta": {
+                                            "properties": {
+                                                "current_page": {
+                                                    "type": "integer"
+                                                },
+                                                "per_page": {
+                                                    "type": "integer"
+                                                },
+                                                "total": {
+                                                    "type": "integer"
+                                                },
+                                                "next_page_url": {
+                                                    "type": "string",
+                                                    "nullable": true
+                                                },
+                                                "prev_page_url": {
+                                                    "type": "string",
+                                                    "nullable": true
+                                                },
+                                                "last_page": {
+                                                    "type": "integer"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Store a new country",
+                "operationId": "6d02e39b821e890a0617c5f81f789d59",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CountryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Country created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CountryResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/country/{id}": {
+            "get": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Get a specific country",
+                "operationId": "cc973ffea2a59e77220fa9a76387be64",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Country ID",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CountryResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Update a specific country",
+                "operationId": "019507d2e3868c7684b2972d8eceb301",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Country ID",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CountryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Country updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CountryResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Delete a country",
+                "operationId": "3572c6fe4270940ca8aae40df5f67323",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Country ID",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Country deleted successfully"
+                    }
+                }
+            }
+        },
+        "/api/country/{id}/restore": {
+            "put": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Restore a deleted country",
+                "operationId": "c65a77cd70f3be6d6dfdf88bdfa7ebf8",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Country ID",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Country restored successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The record has been restored successfully."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/country/{id}/force-destroy": {
+            "delete": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Permanently delete a country",
+                "operationId": "ce3b47a804b7f2848a08eceafad9cde9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Country ID",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Country permanently deleted"
+                    }
+                }
+            }
+        },
         "/api/incident": {
             "get": {
                 "tags": [
@@ -1322,6 +1606,30 @@
                 },
                 "type": "object"
             },
+            "CountryRequest": {
+                "required": [
+                    ""
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "Name Example"
+                    },
+                    "iso_code": {
+                        "type": "string",
+                        "example": "Iso_code Example"
+                    },
+                    "phone_code": {
+                        "type": "string",
+                        "example": "Phone_code Example"
+                    },
+                    "currency": {
+                        "type": "string",
+                        "example": "Currency Example"
+                    }
+                },
+                "type": "object"
+            },
             "IncidentRequest": {
                 "required": [
                     ""
@@ -1369,7 +1677,7 @@
                     },
                     "city_id": {
                         "type": "integer",
-                        "example": "57"
+                        "example": "89"
                     },
                     "township_id": {
                         "type": "string",
@@ -1377,7 +1685,7 @@
                     },
                     "country_id": {
                         "type": "integer",
-                        "example": "87"
+                        "example": "79"
                     },
                     "latitude": {
                         "type": "string",
@@ -1402,6 +1710,10 @@
                     "type": {
                         "type": "string",
                         "example": "Type Example"
+                    },
+                    "verified": {
+                        "type": "string",
+                        "example": "Verified Example"
                     }
                 },
                 "type": "object"
@@ -1461,11 +1773,46 @@
                 },
                 "type": "object"
             },
+            "CountryResource": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": "40"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Name Example"
+                    },
+                    "iso_code": {
+                        "type": "string",
+                        "example": "Iso_code Example"
+                    },
+                    "phone_code": {
+                        "type": "string",
+                        "example": "Phone_code Example"
+                    },
+                    "currency": {
+                        "type": "string",
+                        "example": "Currency Example"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2025-04-06 07:18:18"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2025-04-06 07:18:18"
+                    }
+                },
+                "type": "object"
+            },
             "IncidentResource": {
                 "properties": {
                     "id": {
                         "type": "integer",
-                        "example": "71"
+                        "example": "86"
                     },
                     "title": {
                         "type": "string",
@@ -1509,7 +1856,7 @@
                     },
                     "city_id": {
                         "type": "integer",
-                        "example": "3"
+                        "example": "4"
                     },
                     "township_id": {
                         "type": "string",
@@ -1517,7 +1864,7 @@
                     },
                     "country_id": {
                         "type": "integer",
-                        "example": "66"
+                        "example": "24"
                     },
                     "latitude": {
                         "type": "string",
@@ -1538,12 +1885,12 @@
                     "created_at": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2025-04-02 14:19:42"
+                        "example": "2025-04-07 07:57:14"
                     },
                     "updated_at": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2025-04-02 14:19:42"
+                        "example": "2025-04-07 07:57:14"
                     },
                     "other_condition": {
                         "type": "string",
@@ -1552,6 +1899,10 @@
                     "type": {
                         "type": "string",
                         "example": "Type Example"
+                    },
+                    "verified": {
+                        "type": "string",
+                        "example": "Verified Example"
                     }
                 },
                 "type": "object"
@@ -1864,6 +2215,10 @@
         {
             "name": "City",
             "description": "City"
+        },
+        {
+            "name": "Country",
+            "description": "Country"
         },
         {
             "name": "Incident",
